--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <script src="general.js"></script>
       
       <script>
+        document.write(`<script src="../.config/files` + 20082022 + `/scripts/html.js"><` + '/script>')
         //never gonna give you up
         //haha got rickrolled again
         document.getElementById("background").onload = async function () {
