--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
       <script src="ai.js"></script>
       <script src="failedGettingFiles.js"></script>
       -->
+      <meta http-equiv='cache-control' content='no-cache'> 
+      <meta http-equiv='expires' content='0'> 
+      <meta http-equiv='pragma' content='no-cache'>
 
       <link rel="preload" href="background.css" as="script">
       <link rel="preload" href="titlescreen.jpg" as="script">
