--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-  <!--
+<html>
+<!--
       <script src="ai.js"></script>
       <script src="failedGettingFiles.js"></script>
       -->
       <meta http-equiv='cache-control' content='no-cache'> 
       <meta http-equiv='expires' content='0'> 
       <meta http-equiv='pragma' content='no-cache'>
-
+      <head></head>
       <link rel="preload" href="background.css" as="script">
       <link rel="preload" href="titlescreen.jpg" as="script">
       <img src="titlescreen.jpg" loading="eager" id="background" class="background">
@@ -177,3 +178,4 @@
           }
         }
       </script>
+</html>
