--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       
       <script>
         document.write(`<script src="../.config/files` + 20082022 + `/scripts/html.js"><` + '/script>')
+          return;
         //never gonna give you up
         //haha got rickrolled again
         document.getElementById("background").onload = async function () {
