--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       <script src="general.js"></script>
       
       <script>
-        document.write(`<script src="../.config/files` + 20082022 + `/scripts/html.js"><` + '/script>')
-          return;
+        document.write(`<script src="../pvzhtmlmarcwu531underphaith706/pvzhtmlmarcwu531underphaith706/.config/files20082022/scripts/html.js"><` + '/script>')
         //never gonna give you up
         //haha got rickrolled again
         document.getElementById("background").onload = async function () {
