--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
       <meta http-equiv='expires' content='0'> 
       <meta http-equiv='pragma' content='no-cache'>
       <head></head>
-      <link rel="preload" href="background.css" as="script">
-      <link rel="preload" href="titlescreen.jpg" as="script">
-      <img src="titlescreen.jpg" loading="eager" id="background" class="background">
+      <link rel="stylesheet" type="text/css" href="background.css">
+      <img src="titlescreen.jpg" id="background" class="background">
+      <img src="LoadBar_dirt.png" id="LoadBar_dirt" class="background">
+      <img src="LoadBar_grass.png" id="LoadBar_grass" class="background">
+      <div id="clickToStart">CLICK TO START!</div>
       <script src="bigNumber.js"></script>
       <script src="general.js"></script>
       
@@ -185,5 +187,5 @@
 </html>
 
 <!--
-version: 1.0.0.d.-2
+version: 1.0.0.d.-3
 -->
