--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <!--
       <script src="ai.js"></script>
       <script src="failedGettingFiles.js"></script>
       -->
+      <meta name="viewport" content="width=device-width">
       <meta http-equiv='cache-control' content='no-cache'> 
       <meta http-equiv='expires' content='0'> 
       <meta http-equiv='pragma' content='no-cache'>
       <head></head>
       <link rel="stylesheet" type="text/css" href="background.css">
-      <img src="titlescreen.jpg" id="background" class="background">
-      <img src="LoadBar_dirt.png" id="LoadBar_dirt" class="background">
-      <img src="LoadBar_grass.png" id="LoadBar_grass" class="background">
+      <img src="titlescreen.webp" id="background" class="background">
+      <img src="LoadBar_dirt.webp" id="LoadBar_dirt" class="background">
+      <img src="LoadBar_grass.webp" id="LoadBar_grass" class="background">
       <div id="clickToStart">CLICK TO START!</div>
       <script src="bigNumber.js"></script>
       <script src="general.js"></script>
@@ -187,5 +189,5 @@
 </html>
 
 <!--
-version: 1.0.0.d.-3
+version: 1.0.0.e
 -->
